--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,9 @@ spring.datasource.username=medi
 spring.datasource.password=Medi@12345
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+
+
 
 #spring.datasource.url=jdbc:sqlserver://192.168.0.31:47370;databaseName=Sample_Status;encrypt=true;trustServerCertificate=true;
 #spring.datasource.username=sa
